2004-09-08  David Hyatt  <hyatt@apple.com>

	Fix XML so that elements with no namespace never make HTML elements (when their names coincidentally match).
	
        Reviewed by rjw

        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::createElementNS):

2004-09-07  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John.

	- renamed caretPos to caretRect and made it return a QRect instead
	of taking four out parameters by reference.
	
        * khtml/rendering/render_box.cpp:
        (RenderBox::caretRect):
        * khtml/rendering/render_box.h:
        * khtml/rendering/render_br.cpp:
        (RenderBR::caretRect):
        * khtml/rendering/render_br.h:
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::caretRect):
        * khtml/rendering/render_flow.h:
        * khtml/rendering/render_object.cpp:
        (RenderObject::caretRect):
        * khtml/rendering/render_object.h:
        * khtml/rendering/render_text.cpp:
        (RenderText::caretRect):
        * khtml/rendering/render_text.h:
        * khtml/xml/dom_selection.cpp:
        (DOM::Selection::xPosForVerticalArrowNavigation):
        (DOM::Selection::layoutCaret):
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge caretRectAtNode:offset:]):

2004-09-07  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Kevin.

	<rdar://problem/3759209> REGRESSION (Mail): assertion failure when all of marked text deleted at start of document
	
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::setMarkedRange): Allow any empty range, even if
	it's not in a text node, since in this case it won't matter and
	weird things can happen when all marked text is removed, there
	might not be any text nodes.

2004-09-07  David Hyatt  <hyatt@apple.com>

	Initial text-decoration CSS3 work for editing.  Just gets the properties and values parsed.
	
        Reviewed by darin

        * khtml/css/css_computedstyle.cpp:
        (DOM::CSSComputedStyleDeclarationImpl::getPropertyCSSValue):